--- a/src/app/components/meta-tags/meta-tags.component.scss
+++ b/src/app/components/meta-tags/meta-tags.component.scss
@@ -7,3 +7,8 @@ cp-tag-selection {
     padding: 10px;
     padding-top: 18px;
   }
+
+  .chart-options {
+    position: sticky;
+    top: 42px;
+  }
